# python-examples

./: .env.ollama  .gitignore  Makefile  README.md  pyproject.toml  requirements.dev.txt  requirements.txt
.github/workflows/: ci.yml
ai/agents/openai_agents/: README.md  custom_tool.py  utils.py
ai/agents/smolagents/: custom_tool.py  utils.py
python_examples/ai/: README.md
python_examples/ai/agents/: README.md
python_examples/ai/agents/smolagents/: README.md
python_examples/ai/agents/smolagents/smolagents_code_agent/: README.md  agent.py
python_examples/ai/agents/smolagents/smolagents_custom_tool_class/: README.md  agent.py
python_examples/ai/agents/smolagents/smolagents_custom_tool_function/: README.md  agent.py
python_examples/ai/agents/smolagents/smolagents_gradio_chat/: README.md  agent.py
python_examples/ai/agents/smolagents/smolagents_mcp_stdio/: README.md  agent.py
python_examples/ai/agents/smolagents/smolagents_mcp_streamable_http/: README.md  agent.py
python_examples/ai/agents/smolagents/smolagents_multi_agent/: README.md  agent.py
python_examples/ai/agents/smolagents/smolagents_planning_interval/: README.md  agent.py
python_examples/ai/agents/smolagents/smolagents_simple_prompt/: README.md  agent.py
python_examples/ai/agents/smolagents/smolagents_telemetry/: README.md
python_examples/ai/mcp/: README.md
python_examples/ai/mcp/fastapi_mcp/: README.md
python_examples/ai/mcp/fastmcp/: README.md
python_examples/ai/mcp/gradio/: README.md
python_examples/ai/mcp/mcp_python_sdk/: README.md
python_examples/cli/: README.md
python_examples/cli/simple_cli_using_argparse/: README.md  __main__.py  cli.py
python_examples/cli/simple_cli_using_argparse/test/: test_cli.py
(+52 files in other folders)
