[project]
name = "python-examples"
version = "0.0.1"
requires-python = ">=3.12"

dependencies = [
    "fastapi[standard]>=0.115.12",
    "mcp[cli]>=1.9.1",
]

[dependency-groups]
dev = [
    "flake8>=7.2.0",
    "mypy>=1.15.0",
    "pylint>=3.3.7",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "pytest-watcher>=0.4.3",
]

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 68
disable = """
    missing-docstring,
    too-few-public-methods,
    duplicate-code
"""

[tool.pytest-watcher]
now = true
clear = false
delay = 0.2
runner = ".venv/bin/python"
runner_args = ["-m", "pytest"]
