[project]
name = "python-examples"
version = "0.0.1"
requires-python = ">=3.12"

dependencies = [
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.0.2",
    "fastapi-mcp>=0.3.4",
    "fastapi[standard]>=0.115.12",
    "fastmcp>=2.6.1",
    "gradio>=5.33.2",
    "mcp[cli]==1.9.4",
    "openinference-instrumentation-smolagents>=0.1.14",
    "opentelemetry-exporter-otlp>=1.34.1",
    "opentelemetry-sdk>=1.34.1",
    "pyyaml>=6.0.2",
    "smolagents[gradio,mcp,openai]>=1.17.0",
]

[dependency-groups]
dev = [
    "arize-phoenix>=11.6.2",
    "flake8>=7.2.0",
    "mypy>=1.15.0",
    "pylint>=3.3.7",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "pytest-watcher>=0.4.3",
    "types-pyyaml>=6.0.12.20250516",
]

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 68
disable = """
    missing-docstring,
    too-few-public-methods,
    duplicate-code
"""

[tool.pytest.ini_options]
filterwarnings = [
    "error"
]

[tool.pytest-watcher]
now = true
clear = false
delay = 0.2
runner = ".venv/bin/python"
runner_args = ["-m", "pytest"]
